# sqlite-image

./: .gitignore  Cargo.toml  Makefile  README.md  test.sql
.github/workflows/: test.yaml
benchmarks/: test.sql
src/: img.rs  img_as.rs  lib.rs  meta.rs  util.rs
tests/: test-loadable.py
